Fix typo in CCAC 00.A 01a.

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -12,7 +12,7 @@ notes:
 - id: 1537323241238
   fields:
     Front: |
-      ## CCAC 00.A 01a: Evaluate wihtout using a calculator.
+      ## CCAC 00.A 01a: Evaluate without using a calculator.
       \\[
       (-3)^4
       \\]
