--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -154,3 +154,14 @@ notes:
       \\[
         4x^2 + 12x + 9
       \\]
+- id: 1538436108337
+  fields:
+    Front: |
+      ## CCAC 00.A (Algebra) 03e: Expand and simplify.
+      \\[
+        (x + 2)^3
+      \\]
+    Back: |
+      \\[
+        x^3 + 6x^2 + 12x + 8
+      \\]
