--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -209,3 +209,14 @@ notes:
       \\[
         x(x + 3)(x^2 - 3x + 9)
       \\]
+- id: 1538436108762
+  fields:
+    Front: |
+      ## CCAC 00.A (Algebra) 04e: Factor.
+      \\[
+        3x^{3/2} - 9x^{1/2} + 6x^{-1/2}
+      \\]
+    Back: |
+      \\[
+        3x^{-1/2}(x - 1)(x - 2)
+      \\]
