--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -316,3 +316,14 @@ notes:
       \\[
         \left(x + \frac{1}{2} \right)^2 + \frac{3}{4}
       \\]
+- id: 1538437935286
+  fields:
+    Front: |
+      ## CCAC 00.A (Algebra) 07b: Rewrite by completing the square.
+      \\[
+        2x^2 - 12x + 11
+      \\]
+    Back: |
+      \\[
+        2(x - 3)^2 - 7
+      \\]
