--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -1,6 +1,6 @@
 defaults:
   deckName: Staging
-  modelName: BasicMathJax
+  modelName: PWeave
   tags:
   - Textbooks
   - Math
@@ -9,398 +9,398 @@ defaults:
   - CCAC-00.A-Diagnostics-Algebra
   markdownTabLength: 2
 notes:
-- id: 1537323241238
+- id: 1539840950087
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01a: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01a: Evaluate without using a calculator.
+      $$
       (-3)^4
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       81
-      \\]
-- id: 1537323241290
+      $$
+- id: 1539840950221
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01b: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01b: Evaluate without using a calculator.
+      $$
       -3^4
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       -81
-      \\]
-- id: 1537323241394
+      $$
+- id: 1539840950387
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01c: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01c: Evaluate without using a calculator.
+      $$
       3^{-4}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       \frac{1}{81}
-      \\]
-- id: 1537323241441
+      $$
+- id: 1539840950508
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01d: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01d: Evaluate without using a calculator.
+      $$
       \frac{5^{23}}{5^{21}}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       25
-      \\]
-- id: 1537323241484
+      $$
+- id: 1539840950618
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01e: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01e: Evaluate without using a calculator.
+      $$
       \left(\frac{2}{3}\right)^{-2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       \frac{9}{4}
-      \\]
-- id: 1537323241537
+      $$
+- id: 1539840950737
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 01f: Evaluate without using a calculator.
-      \\[
+      CCAC 00.A (Algebra) 01f: Evaluate without using a calculator.
+      $$
       16^{-3/4}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       \frac{1}{8}
-      \\]
-- id: 1537323988645
+      $$
+- id: 1539840950852
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 02a: Simplify, answering without negative exponents.
-      \\[
+      CCAC 00.A (Algebra) 02a: Simplify, answering without negative exponents.
+      $$
       \sqrt{200} - \sqrt{32}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       6 \sqrt{2}
-      \\]
-- id: 1537323988803
+      $$
+- id: 1539840950984
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 02b: Simplify, answering without negative exponents.
-      \\[
+      CCAC 00.A (Algebra) 02b: Simplify, answering without negative exponents.
+      $$
       (3 a^3 b^3)(4 a b^2)^2
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       48 a^5 b^7
-      \\]
-- id: 1537323989013
+      $$
+- id: 1539840951102
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 02c: Simplify, answering without negative exponents.
-      \\[
+      CCAC 00.A (Algebra) 02c: Simplify, answering without negative exponents.
+      $$
       \left(
         \frac{3 x^{3/2} y^3}{x^2 y^{-1/2}}
       \right)^{-2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
       \frac{x}{9 y^7}
-      \\]
-- id: 1538434782588
+      $$
+- id: 1539840951286
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 03a: Expand and simplify.
-      \\[
+      CCAC 00.A (Algebra) 03a: Expand and simplify.
+      $$
         3(x + 6) + 4(2x - 5)
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         11x -2
-      \\]
-- id: 1538434782665
+      $$
+- id: 1539840951385
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 03b: Expand and simplify.
-      \\[
+      CCAC 00.A (Algebra) 03b: Expand and simplify.
+      $$
         (x + 3)(4x - 5)
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         4x^2 + 7x - 15
-      \\]
-- id: 1538434782737
+      $$
+- id: 1539840951504
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 03c: Expand and simplify.
-      \\[
+      CCAC 00.A (Algebra) 03c: Expand and simplify.
+      $$
         (\sqrt{a} + \sqrt{b})(\sqrt{a} - \sqrt{b})
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         a - b
-      \\]
-- id: 1538436108262
+      $$
+- id: 1539840951635
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 03d: Expand and simplify.
-      \\[
+      CCAC 00.A (Algebra) 03d: Expand and simplify.
+      $$
         (2x + 3)^2
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         4x^2 + 12x + 9
-      \\]
-- id: 1538436108337
+      $$
+- id: 1539840951752
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 03e: Expand and simplify.
-      \\[
+      CCAC 00.A (Algebra) 03e: Expand and simplify.
+      $$
         (x + 2)^3
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x^3 + 6x^2 + 12x + 8
-      \\]
-- id: 1538436108425
+      $$
+- id: 1539840951909
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04a: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04a: Factor.
+      $$
         4x^2 - 25
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         (2x + 5)(2x - 5)
-      \\]
-- id: 1538436108518
+      $$
+- id: 1539840952051
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04b: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04b: Factor.
+      $$
         2x^2 + 5x - 12
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         (2x - 3)(x + 4)
-      \\]
-- id: 1538436108593
+      $$
+- id: 1539840952167
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04c: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04c: Factor.
+      $$
         x^3 - 3x^2 - 4x + 12
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         (x-2)(x-3)(x+2)
-      \\]
-- id: 1538436108691
+      $$
+- id: 1539840952268
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04d: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04d: Factor.
+      $$
         x^4 + 27x
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x(x + 3)(x^2 - 3x + 9)
-      \\]
-- id: 1538436108762
+      $$
+- id: 1539840952418
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04e: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04e: Factor.
+      $$
         3x^{3/2} - 9x^{1/2} + 6x^{-1/2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         3x^{-1/2}(x - 1)(x - 2)
-      \\]
-- id: 1538436108842
+      $$
+- id: 1539840952518
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 04f: Factor.
-      \\[
+      CCAC 00.A (Algebra) 04f: Factor.
+      $$
         x^3y - 4xy
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         xy(x + 2)(x - 2)
-      \\]
-- id: 1538437030478
+      $$
+- id: 1539840952634
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 05a: Simplify.
-      \\[
+      CCAC 00.A (Algebra) 05a: Simplify.
+      $$
         \frac{x^2 + 3x + 2}{x^2 - x - 2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         \frac{x + 2}{x - 2}
-      \\]
-- id: 1538437030624
+      $$
+- id: 1539840952769
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 05b: Simplify.
-      \\[
+      CCAC 00.A (Algebra) 05b: Simplify.
+      $$
         \frac{2x^2 - x - 1}{x^2 - 9}
         \cdot
         \frac{x + 3}{2x + 1}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         \frac{x - 1}{x - 3}
-      \\]
-- id: 1538437030740
+      $$
+- id: 1539840952917
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 05c: Simplify.
-      \\[
+      CCAC 00.A (Algebra) 05c: Simplify.
+      $$
         \frac{x^2}{x^2 - 4}
         -
         \frac{x + 1}{x + 2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         \frac{1}{x - 2}
-      \\]
-- id: 1538437030873
+      $$
+- id: 1539840953035
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 05d: Simplify.
-      \\[
+      CCAC 00.A (Algebra) 05d: Simplify.
+      $$
         \frac{
           \frac{y}{x} - \frac{x}{y}
         }{
           \frac{1}{y} - \frac{1}{x}
         }
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         -(x + y)
-      \\]
-- id: 1538437520588
+      $$
+- id: 1539840953171
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 06a: Rationalize and simplify.
-      \\[
+      CCAC 00.A (Algebra) 06a: Rationalize and simplify.
+      $$
         \frac{\sqrt{10}}{\sqrt{5} - 2}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         5\sqrt{2} + 2\sqrt{10}
-      \\]
-- id: 1538437520688
+      $$
+- id: 1539840953270
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 06b: Rationalize and simplify.
-      \\[
+      CCAC 00.A (Algebra) 06b: Rationalize and simplify.
+      $$
         \frac{\sqrt{4 + h} - 2}{h}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         \frac{1}{\sqrt{4 + h} + 2}
-      \\]
-- id: 1538437935171
+      $$
+- id: 1539840953442
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 07a: Rewrite by completing the square.
-      \\[
+      CCAC 00.A (Algebra) 07a: Rewrite by completing the square.
+      $$
         x^2 + x + 1
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         \left(x + \frac{1}{2} \right)^2 + \frac{3}{4}
-      \\]
-- id: 1538437935286
+      $$
+- id: 1539840953537
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 07b: Rewrite by completing the square.
-      \\[
+      CCAC 00.A (Algebra) 07b: Rewrite by completing the square.
+      $$
         2x^2 - 12x + 11
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         2(x - 3)^2 - 7
-      \\]
-- id: 1538439744031
+      $$
+- id: 1539840953636
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08a: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08a: Find real solutions.
+      $$
         x + 5 = 14 - \frac{1}{2}x
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = 6
-      \\]
-- id: 1538439744147
+      $$
+- id: 1539840953736
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08b: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08b: Find real solutions.
+      $$
         \frac{2x}{x + 1} = \frac{2x - 1}{x}
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = 1
-      \\]
-- id: 1538439744253
+      $$
+- id: 1539840953867
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08c: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08c: Find real solutions.
+      $$
         x^2 - x - 12 = 0
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = -3,4
-      \\]
-- id: 1538439744379
+      $$
+- id: 1539840953970
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08d: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08d: Find real solutions.
+      $$
         2x^2 + 4x + 1 = 0
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = -1 \pm \frac{1}{2}\sqrt{2}
-      \\]
-- id: 1538439744466
+      $$
+- id: 1539840954101
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08e: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08e: Find real solutions.
+      $$
         x^4 - 3x^2 + 2 = 0
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = \pm 1 \pm \sqrt{2}
-      \\]
-- id: 1538439744562
+      $$
+- id: 1539840954220
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08f: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08f: Find real solutions.
+      $$
         3|x - 4| = 10
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = \frac{22}{3}, \frac{2}{3}
-      \\]
-- id: 1538439744647
+      $$
+- id: 1539840954334
   fields:
     Front: |
-      ## CCAC 00.A (Algebra) 08g: Find real solutions.
-      \\[
+      CCAC 00.A (Algebra) 08g: Find real solutions.
+      $$
         2x(4 - x)^{-1/2} - 3\sqrt{4 - x} = 0
-      \\]
+      $$
     Back: |
-      \\[
+      $$
         x = \frac{12}{5}
-      \\]
+      $$
