--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00A.yml
@@ -495,3 +495,12 @@ notes:
       $$
     Back: |
       False.
+- id: 1539840955621
+  fields:
+    Front: |
+      CCAC 00.A (Algebra) 10e: State whether the equation is true or false.
+      $$
+        \frac{1}{x - y} = \frac{1}{x} - \frac{1}{y}
+      $$
+    Back: |
+      False.
