--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -93,3 +93,14 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+- id: 1539795156395
+  fields:
+    Front: |
+      CCAC 00.B (Analytic Geometry) 04c: Let $A(-7, 4)$ and $B(5, -12)$ be points in the plane. Find the midpoint of the segment $AB$.
+    Back: |
+      $$
+        (-1, -4)
+      $$
+
+      ---
+      (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
