--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -115,3 +115,14 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+- id: 1539795156613
+  fields:
+    Front: |
+      CCAC 00.B (Analytic Geometry) 04e: Let $A(-7, 4)$ and $B(5, -12)$ be points in the plane. Find an equation of the perpendicular bisector of $AB$.
+    Back: |
+      $$
+        3x - 4y = 13
+      $$
+
+      ---
+      (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
