--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -137,3 +137,37 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+- id: 1539795661412
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.B (Analytic Geometry) 05a: Sketch the region in the $xy$-plane defined by the inequalities:
+      $$
+        -1 \le y \le 3
+      $$
+    Back: |
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import numpy as np
+
+      fig, ax = plt.subplots()
+
+      x = np.arange(-1, 2)
+      y1 = np.array([-1, -1])
+      y2 = np.array([3, 3])
+
+      ax.axhline(y = -1, color = 'k')
+      ax.axhline(y = 3, color = 'k')
+      ax.fill_between(x, -1, 3)
+      ax.text(0, 3.1, '3')
+      ax.text(0, 0.1, '0')
+      ax.text(0, -1.4, '-1')
+
+      ax.axhline(y = 0, color = 'k', linewidth = 0.5)
+      ax.axvline(x = 0, color = 'k', linewidth = 0.5)
+      plt.ylim((-2, 4))
+      plt.show()
+      ```
+
+      ---
+      (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
