--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -171,3 +171,45 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+- id: 1539795662362
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.B (Analytic Geometry) 05b: Sketch the region in the $xy$-plane defined by the inequalities:
+      $$
+        |x| < 4 \textrm{ and } |y| < 2
+      $$
+    Back: |
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import numpy as np
+
+      fig, ax = plt.subplots()
+
+      x = np.array([-4, 4])
+      y = np.array([-2, 2])
+      x1 = np.array([-4, -4])
+      x2 = np.array([4, 4])
+      y1 = np.array([-2, -2])
+      y2 = np.array([2, 2])
+
+      ax.plot(x, y1, color = 'k', linestyle = '--')
+      ax.plot(x, y2, color = 'k', linestyle = '--')
+      ax.plot(x1, y, color = 'k', linestyle = '--')
+      ax.plot(x2, y, color = 'k', linestyle = '--')
+      ax.fill_between(x, y1, y2)
+      ax.text(0, 2.1, '2')
+      ax.text(0, 0.1, '0')
+      ax.text(0, -2.4, '-2')
+      ax.text(-4.4, 0.1, '-4')
+      ax.text(4.1, 0.1, '4')
+
+      ax.axhline(y = 0, color = 'k', linewidth = 0.5)
+      ax.axvline(x = 0, color = 'k', linewidth = 0.5)
+      plt.ylim((-4, 4))
+      plt.xlim((-6, 6))
+      plt.show()
+      ```
+
+      ---
+      (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
