--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/00B.yml
@@ -285,3 +285,39 @@ notes:
 
       ---
       (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
+- id: 1539795665487
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 00.B (Analytic Geometry) 05e: Sketch the region in the $xy$-plane defined by the inequality:
+      $$
+        x^2 + y^2 < 4
+      $$
+    Back: |
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x, y = sy.symbols('x y')
+      p = sy.plot_implicit(sy.Lt(x**2 + y**2, 4), line_color = '#2676b0', show = False)
+      p.xlim = (-6,6)
+      p.ylim = (-4,4)
+
+      # Must manually enable backend without showing it.
+      if hasattr(p, '_backend'):
+        p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+
+      c = plt.Circle((0,0), 2, fill = False, edgecolor = 'k', linestyle = '--')
+      ax.add_artist(c)
+      ax.text(1, 2, '$x^2 + y^2 = 4$')
+
+      p._backend.show()
+      ```
+
+      ---
+      (If you have had difficulty with this problem, you may wish to consult the review of analytic geometry in Appendix B of CCAC.)
